Añade etiqueta h1 para mostrar el dia de la semana

--- a/Ejercicio-1/index.html
+++ b/Ejercicio-1/index.html
@@ -6,7 +6,7 @@
     <title>Dia de la semana</title>
 </head>
 <body>
-    
+    <h1 id="saludo" style="text-align: center;"></h1>
     <script src="script.js"></script>
 </body>
 </html>
