--- a/Ejercicio-2/index.html
+++ b/Ejercicio-2/index.html
@@ -6,7 +6,13 @@
     <title>Letra Invertida</title>
 </head>
 <body>
-    
+    <form>
+        <input type="text" id="entrada" placeholder="Ingrese una palabra">
+        <submit type="submit">Invertir</submit>
+        <br>
+        <div id="salida"></div>
+    </form>
+
     <script src="script.js"></script>
 </body>
 </html>
