--- a/Ejercicio-2/index.html
+++ b/Ejercicio-2/index.html
@@ -6,13 +6,14 @@
     <title>Letra Invertida</title>
 </head>
 <body>
-    <form>
-        <input type="text" id="entrada" placeholder="Ingrese una palabra">
-        <submit type="submit">Invertir</submit>
-        <br>
-        <div id="salida"></div>
-    </form>
+
+    <input type="text" id="entrada" placeholder="Ingrese una palabra">
+    <button id="enviar">Invertir</button>
+    <br>
+    <div id="salida"></div>
+
 
     <script src="script.js"></script>
 </body>
+
 </html>
