Obter el elemento html y escribir dentro la diferencia entre el dia de arequipa y el dia de hoy

--- a/Ejercicio-3/index.html
+++ b/Ejercicio-3/index.html
@@ -6,7 +6,7 @@
     <title>Dia de Arequipa</title>
 </head>
 <body>
-    <h1 style="text-align: center;">Falta <span id="diaArequipa"></span> dias para el dia de Arequipa!!!</h1>
+    <h1 style="text-align: center;">Falta <span id="dias"></span> dias para el dia de Arequipa!!!</h1>
 
     <script src="script.js"></script>
 </body>
