Crear etiqueta html para mostrar el codigo meet

--- a/Ejercicio-4/index.html
+++ b/Ejercicio-4/index.html
@@ -6,7 +6,7 @@
     <title>Codigo Google Meet</title>
 </head>
 <body>
-    
+    <h1 style="text-align: center;" id="codigo"></h1>
     <script src="script.js"></script>
 </body>
 </html>
