--- a/Ejercicio-4/index.html
+++ b/Ejercicio-4/index.html
@@ -6,6 +6,10 @@
     <title>Codigo Google Meet</title>
 </head>
 <body>
+    <label for="entrada">Url: </label>
+    <input type="text" id="entrada" placeholder="Ingrese url google meet">
+    <button id="boton">Obtener Codigo</button>
+
     <h1 style="text-align: center;" id="codigo"></h1>
     <script src="script.js"></script>
 </body>
