Obtner el formulario y crear un evento submit

--- a/Ejercicio-5/index.html
+++ b/Ejercicio-5/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <h1>Tabla dinamica</h1>
-    <form action="">
-        <label for="numeroValores">Numero de valores</label>
+    <form id="form">
+        <label for="numeroValores">Numero de valores: </label>
         <input type="number" id="numeroValores" name="numeroValores">
         <input type="submit" value="Crear tabla">
     </form>
