Crear una tabla base

--- a/Ejercicio-5/index.html
+++ b/Ejercicio-5/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tablas dinamicas</title>
 </head>
+
 <body>
     <h1>Tabla dinamica</h1>
     <form id="form">
@@ -13,6 +15,17 @@
         <input type="submit" value="Crear tabla">
     </form>
 
+
+    <table>
+        <tbody id="cuerpoTabla">
+            <tr>
+                <td style="border: 2px solid #000;">1</td>
+            </tr>
+        </tbody>
+    </table>
+
+
     <script src="script.js"></script>
 </body>
+
 </html>
