Crear boton para sumar

--- a/Ejercicio-5/index.html
+++ b/Ejercicio-5/index.html
@@ -21,7 +21,8 @@
         <tbody id="cuerpoTabla">
         </tbody>
     </table>
-
+    <br>
+    <button id="btnSuma">Calcular Suma</button>
 
     <script src="script.js"></script>
 </body>
