Obtener todas las celdas y sumar su contenido

--- a/Ejercicio-5/index.html
+++ b/Ejercicio-5/index.html
@@ -23,6 +23,7 @@
     </table>
     <br>
     <button id="btnSuma">Calcular Suma</button>
+    <p id="resultado"></p>
 
     <script src="script.js"></script>
 </body>
