Crear botones de aumento y reduccion

--- a/Ejercicio6/pagina1/index.html
+++ b/Ejercicio6/pagina1/index.html
@@ -7,6 +7,11 @@
 </head>
 <body>
     <p style="text-align: center;">Texto de Prueba</p>
+    <div style="text-align: center;">
+        <button>Aumentar</button>
+        <button>Reducir</button>
+
+    </div>
 
     <script src="script.js"></script>
 </body>
