Crear identificadores a los elementos

--- a/Ejercicio6/pagina1/index.html
+++ b/Ejercicio6/pagina1/index.html
@@ -6,11 +6,10 @@
     <title>Cambio de Tamaño y Color</title>
 </head>
 <body>
-    <p style="text-align: center;">Texto de Prueba</p>
+    <p style="text-align: center;" id="textoPrueba">Texto de Prueba</p>
     <div style="text-align: center;">
-        <button>Aumentar</button>
-        <button>Reducir</button>
-
+        <button id="btnAumentar">Aumentar</button>
+        <button id="btnReducir">Reducir</button>
     </div>
 
     <script src="script.js"></script>
