Añadir 3 botones para cambiar el color a rojo, azul o verde

--- a/Ejercicio6/pagina1/index.html
+++ b/Ejercicio6/pagina1/index.html
@@ -11,6 +11,12 @@
         <button id="btnAumentar">Aumentar</button>
         <button id="btnReducir">Reducir</button>
     </div>
+    <br>
+    <div style="text-align: center;">
+        <button id="btnRojo">Rojo</button>
+        <button id="btnAzul">Azul</button>
+        <button id="btnVerde">Verde</button>
+    </div>
 
     <script src="script.js"></script>
 </body>
