Crear una lista para elegir el tipo de operacion

--- a/Ejercicio6/pagina2/index.html
+++ b/Ejercicio6/pagina2/index.html
@@ -6,7 +6,12 @@
     <title>Operaciones aritmeticas, logicas y de bits</title>
 </head>
 <body>
-
+    <label for="tipoOperacion">Tipo de Operacion</label>
+    <select name="tipoOperacion" id="tipoOperacion">
+        <option value="operacionAritmetica">Aritmetica</option>
+        <option value="operacionLogica">Logica</option>
+        <option value="operacioBits">De bits</option>
+    </select>
 
     <script src="script.js"></script>
 </body>
