Crear etiquetas para ingresar valores

--- a/Ejercicio6/pagina2/index.html
+++ b/Ejercicio6/pagina2/index.html
@@ -6,12 +6,22 @@
     <title>Operaciones aritmeticas, logicas y de bits</title>
 </head>
 <body>
-    <label for="tipoOperacion">Tipo de Operacion</label>
-    <select name="tipoOperacion" id="tipoOperacion">
-        <option value="operacionAritmetica">Aritmetica</option>
-        <option value="operacionLogica">Logica</option>
-        <option value="operacioBits">De bits</option>
-    </select>
+    <div style="text-align: center;">
+        <label for="tipoOperacion">Tipo de Operacion</label>
+        <select name="tipoOperacion" id="tipoOperacion">
+            <option value="operacionAritmetica">Aritmetica</option>
+            <option value="operacionLogica">Logica</option>
+            <option value="operacioBits">De bits</option>
+        </select>
+    </div>
+    <br>
+    <div style="text-align: center;">
+        <label for="valor1">Valor 1</label>
+        <input type="number" id="valor1">
+    
+        <label for="valor2">Valor 2</label>
+        <input type="number" id="valor2">
+    </div>
 
     <script src="script.js"></script>
 </body>
