--- a/Ejercicio6/pagina2/index.html
+++ b/Ejercicio6/pagina2/index.html
@@ -16,12 +16,18 @@
     </div>
     <br>
     <div style="text-align: center;">
-        <label for="valor1">Valor 1</label>
+        <label for="valor1">Valor: </label>
         <input type="number" id="valor1">
-    
-        <label for="valor2">Valor 2</label>
+        <label for="valor2">Valor: </label>
         <input type="number" id="valor2">
     </div>
+    <br>
+    <div style="text-align: center;">
+        <button id="btnCalcular">Calcular</button>
+        <h1 id="resultado"></h1>
+    </div>
+
+    
 
     <script src="script.js"></script>
 </body>
