--- a/Ejercicio6/pagina2/index.html
+++ b/Ejercicio6/pagina2/index.html
@@ -9,9 +9,9 @@
     <div style="text-align: center;">
         <label for="tipoOperacion">Tipo de Operacion</label>
         <select name="tipoOperacion" id="tipoOperacion">
-            <option value="operacionAritmetica">Aritmetica</option>
+            <option value="operacionAritmetica" selected>Aritmetica</option>
             <option value="operacionLogica">Logica</option>
-            <option value="operacioBits">De bits</option>
+            <option value="operacionBits">De bits</option>
         </select>
     </div>
     <br>
@@ -20,6 +20,14 @@
         <input type="number" id="valor1">
         <label for="valor2">Valor: </label>
         <input type="number" id="valor2">
+        <label for="operacion">Operacion</label>
+        <select name="operacion" id="operacion">
+            <option value="suma">Suma</option>
+            <option value="resta">Resta</option>
+            <option value="multiplicacion">Multiplicacion</option>
+            <option value="division">Division</option>
+            <option value="modulo">Modulo</option>
+        </select>
     </div>
     <br>
     <div style="text-align: center;">
