Verificar que ambos valores sean ingresados

--- a/Ejercicio6/pagina2/index.html
+++ b/Ejercicio6/pagina2/index.html
@@ -16,11 +16,11 @@
     </div>
     <br>
     <div style="text-align: center;">
-        <label for="valor1">Valor: </label>
-        <input type="number" id="valor1">
-        <label for="valor2">Valor: </label>
-        <input type="number" id="valor2">
-        
+        <label for="valor1">Valor 1: </label>
+        <input type="number" id="valor1" required>
+        <label for="valor2">Valor 2: </label>
+        <input type="number" id="valor2" required>
+
         <label for="operacion">Operacion</label>
         <select name="operacion" id="operacion">
             <option value="suma">Suma</option>
