--- a/Ejercicio6/pagina2/index.html
+++ b/Ejercicio6/pagina2/index.html
@@ -17,9 +17,9 @@
     <br>
     <div style="text-align: center;">
         <label for="valor1">Valor 1: </label>
-        <input type="number" id="valor1" required>
+        <input type="number" id="valor1">
         <label for="valor2">Valor 2: </label>
-        <input type="number" id="valor2" required>
+        <input type="number" id="valor2">
 
         <label for="operacion">Operacion</label>
         <select name="operacion" id="operacion">
